--- a/principales_propiedades.html
+++ b/principales_propiedades.html
@@ -15,13 +15,22 @@
 
     <!-- Cuerpo main de nuestro html -->
     <main>
-        <article class="modal">
-            <h1>Soy un modal</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum laboriosam nostrum temporibus nobis fugiat est natus ullam? Facilis, accusantium dolores et molestias incidunt maiores nisi saepe obcaecati quam, qui earum!</p>
-            <button>Aceptar</button>
+        <article>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla autem alias recusandae at eligendi sunt libero nam fugit! Laboriosam, tempore. Similique explicabo itaque repellat nesciunt eveniet quae aut qui sit.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla autem alias recusandae at eligendi sunt libero nam fugit! Laboriosam, tempore. Similique explicabo itaque repellat nesciunt eveniet quae aut qui sit.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla autem alias recusandae at eligendi sunt libero nam fugit! Laboriosam, tempore. Similique explicabo itaque repellat nesciunt eveniet quae aut qui sit.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla autem alias recusandae at eligendi sunt libero nam fugit! Laboriosam, tempore. Similique explicabo itaque repellat nesciunt eveniet quae aut qui sit.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla autem alias recusandae at eligendi sunt libero nam fugit! Laboriosam, tempore. Similique explicabo itaque repellat nesciunt eveniet quae aut qui sit.</p>
         </article>
+        <article class="container">
+            <article class="modal">
+                <h1>Soy un modal</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum laboriosam nostrum temporibus nobis fugiat est natus ullam? Facilis, accusantium dolores et molestias incidunt maiores nisi saepe obcaecati quam, qui earum!</p>
+                <button>Aceptar</button>
+            </article>
     </main>
-
+        </article>
+    
     <!-- Pie de nuestro html -->
     <footer>
 
